[package]
name = "sst_sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for SST"
documentation = "https://sst.dev/docs"
readme = "../../README.md"
repository = "https://github.com/sst/sst"
license = "MIT"
keywords = ["aws", "sst"]
authors = ["Rohan Godha <hi@rohangodha.com>"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.5"
serde = "1.0.217"
serde_json = "1.0"
thiserror = "1.0"
